# esp32

project-tcp-client/: CMakeCache.txt  CMakeLists.txt  sdkconfig
project-tcp-client/main/: CMakeLists.txt  main.c  servo_control.h  tcp_client.c  tcp_client.h  tcp_client_main.c  wifi_connect.c  wifi_connect.h
robotArm/: CMakeCache.txt  CMakeLists.txt  app-flash_args  cmake_install.cmake  config.env  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  project_description.json  sdkconfig  sdkconfig.old
robotArm/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
robotArm/main/: .main.c.swp  CMakeLists.txt  led_control.c  main.c  mqtt_client.c  mqtt_client.h  servo_control.c  tcp_client.c  tcp_client.h  websocket_client.c  websocket_client.h  wifi_connect.c  wifi_connect.h
